--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
       <version>3.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.orsonpdf</groupId>
+      <artifactId>orsonpdf</artifactId>
+      <version>1.7</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
     <dependency>
       <groupId>org.xerial</groupId>
